# bili-cli-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: app.rs  args.rs  down.rs  ffmpeg.rs  ffmpeg_cmd.rs  local.rs  main.rs  types.rs
src/down/: mod.rs
src/entities/: mod.rs  property.rs
