[package]
name = "bili-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
bilirust = { git = "https://github.com/niuhuan/bilirust.git", branch = "master" }
clap = { version = "3.0.14", features = ["derive"] }
dirs = "4.0.0"
image = "0.23.14"
indicatif = "0.16.2"
lazy_static = "1.4.0"
opener = "0.5.0"
qrcode = "0.12.0"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["stream"] }
sea-orm = { version = "0.6.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["macros", "io-util"] }
tokio-util = { version = "0.6.9", features = ["io"] }
uuid = "0.8.2"
bytes = "*"
futures = "0.3.21"
dialoguer = "0.9.0"
itertools = "0.10.3"
