[package]
name = "bili-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
anyhow = "1.0.66"
bilirust = { git = "https://github.com/niuhuan/bilirust.git", branch = "master" }
clap = { version = "4.0.19", features = ["derive"] }
dirs = "4.0.0"
image = "0.23"
indicatif = "0.17.1"
lazy_static = "1.4.0"
opener = "0.5.0"
qrcode = "0.12.0"
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["stream"] }
sea-orm = { version = "0.10.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "io-util"] }
tokio-util = { version = "0.7.4", features = ["io"] }
uuid = { version = "1.2.1", features = ["v4"] }
bytes = "1.2.1"
futures = "0.3.25"
dialoguer = "0.10.2"
itertools = "0.10.5"
qr2term = "0.3.1"
once_cell = "1.16.0"
rsmpeg = { optional = true, version = "0.12" }

[features]
default = []
ffmpeg_api = [
    "dep:rsmpeg"
]

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

